# pointr-if

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  requirements.txt
configs/: ablation_global_only.yaml  ablation_no_occ.yaml  pcn_feature_gmv_if_a100.yaml  real_projected_shapenet55_ablation_global_only.yaml  real_projected_shapenet55_ablation_no_occ.yaml  real_projected_shapenet55_adapointr_if_fast.yaml  real_projected_shapenet55_feature_gmv_if_a100.yaml  real_projected_shapenet55_gated_local_if.yaml  real_projected_shapenet55_gmv_if.yaml  real_projected_shapenet55_seed_if.yaml  smoke_synthetic.yaml  titanx_fast_subset.yaml  titanx_pcn_refiner.yaml
deliverables/: REAL_RESULTS_ARTIFACTS.md  archive_listing.txt
docs/: A100_PCN_RESULTS.md  CODEX_STATUS.md  EXPERIMENT_LOG.md  FINAL_REPORT_TEMPLATE.md  FOURTH_PASS_MV_CONSISTENCY_REPORT.md  HARD_SECOND_PASS_REPORT.md  IMPLEMENTATION_PLAN.md  MAIN_MODEL_IMPROVEMENT_PLAN.md  MODEL_IMPROVEMENT_PLAN.md  PROFESSOR_FEEDBACK_RESPONSE.md  REFERENCES.md  SERVER_RUNBOOK.md  THIRD_PASS_SEED_POINTR_IF_REPORT.md  UPLOADED_PROPOSAL_ANALYSIS.md
downloads/: infinitescript_gateway.js
patches/: external_pointr_runtime.patch
scripts/: audit_current_results.sh  build_fourth_pass_groups.sh  build_pcn_artifacts.sh  doctor.py  evaluate_candidate_oracle.sh  evaluate_candidate_source_policy.sh  evaluate_mvc_pointr_if.sh  evaluate_run_b_best.sh  evaluate_seed_if.sh  evaluate_titanx.sh  export_tta_candidates.sh  pointr_baseline_commands.sh  run_ablation_synthetic.sh  run_fourth_pass_mvc_sweep.sh  run_smoke.sh  (+9 more)
(+60 files in other folders)
