[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointr-if"
version = "0.1.0"
description = "Implicit surface refinement module for PoinTr point-cloud completion"
requires-python = ">=3.9"
dependencies = [
  "torch>=1.12",
  "torchvision>=0.13",
  "numpy>=1.23",
  "h5py>=3.8",
  "PyYAML>=6.0",
  "tqdm>=4.64",
  "matplotlib>=3.6",
  "scipy>=1.10",
  "easydict>=1.13",
  "einops>=0.6",
  "tensorboardX>=2.6",
  "timm==0.4.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
